RESOLVED FIXED118905
[GTK] Assertion fails when the mouse pointer is styled with a custom cursor
https://bugs.webkit.org/show_bug.cgi?id=118905
Summary [GTK] Assertion fails when the mouse pointer is styled with a custom cursor
Enrique Ocaña
Reported 2013-07-19 07:09:14 PDT
Created attachment 207090 [details] Archive with HTML test case In a debug build, when the mouse pointer is over an element with a custom cursor style, the following assertion fail error message is printed: (MiniBrowser:18521): Gdk-CRITICAL **: gdk_cursor_new_from_pixbuf: assertion `GDK_IS_PIXBUF (pixbuf)' failed An HTML test case is attached.
Attachments
Archive with HTML test case (465 bytes, application/x-compressed-tar)
2013-07-19 07:09 PDT, Enrique Ocaña
no flags
Patch (1.68 KB, patch)
2013-07-19 07:28 PDT, Enrique Ocaña
no flags
Patch (1.67 KB, patch)
2013-07-29 03:08 PDT, Enrique Ocaña
no flags
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion (506.19 KB, application/zip)
2013-07-29 04:14 PDT, Build Bot
no flags
Enrique Ocaña
Comment 1 2013-07-19 07:28:10 PDT
Philippe Normand
Comment 2 2013-07-29 02:55:19 PDT
Comment on attachment 207093 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207093&action=review Looks good to me, just a little thing to fix up > Source/WebCore/platform/gtk/CursorGtk.cpp:65 > + if (!image->nativeImageForCurrentFrame() || (!pixbuf)) Nit: no need for () wrapping !pixbuf
Enrique Ocaña
Comment 3 2013-07-29 03:08:29 PDT
Build Bot
Comment 4 2013-07-29 04:14:35 PDT
Comment on attachment 207629 [details] Patch Attachment 207629 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/1244991 New failing tests: editing/selection/leak-document-with-selection-inside.html
Build Bot
Comment 5 2013-07-29 04:14:37 PDT
Created attachment 207638 [details] Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.4
WebKit Commit Bot
Comment 6 2013-09-05 07:14:47 PDT
Comment on attachment 207629 [details] Patch Clearing flags on attachment: 207629 Committed r155113: <http://trac.webkit.org/changeset/155113>
WebKit Commit Bot
Comment 7 2013-09-05 07:14:50 PDT
All reviewed patches have been landed. Closing bug.
Claudio Saavedra
Comment 8 2013-09-05 07:42:04 PDT
The question is, why do creation of a custom cursor fails at all? Is this what is causing bug 120675 ?
Claudio Saavedra
Comment 9 2013-09-05 14:23:04 PDT
I tried the patch. Basically now there is no cursor at all. That is no fix. We should follow up in bug 120675.
Note You need to log in before you can comment on or make changes to this bug.