[GTK] Assertion fails when the mouse pointer is styled with a custom cursor https://bugs.webkit.org/show_bug.cgi?id=118905

Patch by Enrique Ocaña González <eocanha@igalia.com> on 2013-09-05
Reviewed by Philippe Normand.

Checked that the custom cursor image and its pixbuf is valid and create a null
cursor otherwise.

* platform/gtk/CursorGtk.cpp:
(WebCore::createCustomCursor):

Canonical link: https://commits.webkit.org/138725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155113 268f45cc-cd09-0410-ab3c-d52691b4dbfc